--- a/front/src/styles/app.scss
+++ b/front/src/styles/app.scss
@@ -18,10 +18,14 @@ body,
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
-  background-color: var(--ba-bg-color);
+  background-color: #f5f5f5;
   font-size: 14px;
   overflow: hidden;
   position: relative;
+}
+
+body {
+  padding: 15px;
 }
 
 // 阿里 iconfont Symbol引用css
